[gd_scene load_steps=15 format=2]

[ext_resource path="res://sprites/player.png" type="Texture" id=1]
[ext_resource path="res://player.gd" type="Script" id=2]
[ext_resource path="res://Kenney Blocks.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://sprites/healthbar/bartwo.png" type="Texture" id=4]
[ext_resource path="res://sprites/healthbar/barone.png" type="Texture" id=5]
[ext_resource path="res://sprites/healthbar/barthree.png" type="Texture" id=6]
[ext_resource path="res://explosionCrunch_000.ogg" type="AudioStream" id=7]
[ext_resource path="res://laserRetro_000.ogg" type="AudioStream" id=8]
[ext_resource path="res://laserRetro_002.ogg" type="AudioStream" id=9]
[ext_resource path="res://font.tres" type="DynamicFont" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 16 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 8
font_data = ExtResource( 3 )

[node name="player" type="KinematicBody2D" groups=["player"]]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -4, 0 )
scale = Vector2( 4, 4 )
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 35.296, 0 )

[node name="fire timer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="stamina timer" type="Timer" parent="."]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0, -6.07723 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="Control"]

[node name="Label" type="Label" parent="Control/CanvasLayer"]
margin_top = 464.012
margin_right = 571.0
margin_bottom = 515.012
rect_scale = Vector2( 1.8, 1.8 )
custom_colors/font_color = Color( 1, 0.92549, 0.839216, 1 )
custom_fonts/font = SubResource( 3 )
text = "PRESS x TO START
UP arrow-JUMP  Right arrow-MOVE  c-SHOOT"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label1" type="Label" parent="Control/CanvasLayer"]
visible = false
margin_top = 464.012
margin_right = 571.0
margin_bottom = 515.012
rect_scale = Vector2( 1.8, 1.8 )
custom_colors/font_color = Color( 1, 0.92549, 0.839216, 1 )
custom_fonts/font = SubResource( 3 )
text = "PRESS SPACE TO START
W-JUMP  D-MOVE  SHIFT-SHOOT"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label7" type="Label" parent="Control/CanvasLayer"]
margin_top = 559.286
margin_right = 853.333
margin_bottom = 610.286
rect_scale = Vector2( 1.2, 1.2 )
custom_colors/font_color = Color( 1, 0.92549, 0.839216, 1 )
custom_fonts/font = SubResource( 3 )
text = "press tab to toggle controls"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Control/CanvasLayer"]
margin_left = 255.0
margin_top = 9.0
margin_right = 324.0
margin_bottom = 33.0
rect_scale = Vector2( 1.8, 1.8 )
custom_colors/font_color = Color( 1, 0.92549, 0.839216, 1 )
custom_fonts/font = SubResource( 3 )
text = "JUMP"
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Control/CanvasLayer"]
margin_left = 255.0
margin_top = 58.1608
margin_right = 324.0
margin_bottom = 82.1608
rect_scale = Vector2( 1.8, 1.8 )
custom_colors/font_color = Color( 1, 0.92549, 0.839216, 1 )
custom_fonts/font = SubResource( 3 )
text = "FIRE"
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="Control/CanvasLayer"]
margin_left = 851.541
margin_top = 16.0
margin_right = 920.541
margin_bottom = 40.0
rect_scale = Vector2( 1.8, 1.8 )
custom_colors/font_color = Color( 0.815686, 0.505882, 0.34902, 1 )
custom_fonts/font = SubResource( 3 )
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureProgress" type="TextureProgress" parent="Control/CanvasLayer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 242.0
margin_bottom = 50.0
max_value = 20.0
value = 20.0
texture_under = ExtResource( 6 )
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 5 )
tint_progress = Color( 1, 0.92549, 0.839216, 1 )
radial_fill_degrees = 0.0
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureProgress2" type="TextureProgress" parent="Control/CanvasLayer"]
margin_left = 10.0
margin_top = 58.1608
margin_right = 242.0
margin_bottom = 98.1608
max_value = 10.0
value = 10.0
texture_under = ExtResource( 6 )
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 5 )
tint_progress = Color( 0.815686, 0.505882, 0.34902, 1 )
radial_fill_degrees = 0.0
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="Control/CanvasLayer"]
margin_right = 239.0
margin_bottom = 140.0
rect_scale = Vector2( 4.28, 4.28 )
custom_colors/font_color = Color( 0.815686, 0.505882, 0.34902, 1 )
custom_fonts/font = ExtResource( 10 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label6" type="Label" parent="Control/CanvasLayer"]
margin_top = 330.0
margin_right = 239.0
margin_bottom = 393.0
rect_scale = Vector2( 4.28, 4.28 )
custom_colors/font_color = Color( 0.815686, 0.505882, 0.34902, 1 )
custom_fonts/font = SubResource( 4 )
align = 1

[node name="fireball" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[node name="coin" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )

[node name="jump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
volume_db = -10.0

[connection signal="timeout" from="fire timer" to="." method="_on_fire_timer_timeout"]
[connection signal="timeout" from="stamina timer" to="." method="_on_stamina_timer_timeout"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="finished" from="fireball" to="." method="_on_fireball_finished"]
